--- a/front/src/Weekview.css
+++ b/front/src/Weekview.css
@@ -132,8 +132,8 @@
 
 #closed-info2 {
    display: flex;
-   background: lightblue;
-   margin-left: 28%;
+   background: deepskyblue;
+   margin-left: 21.7%;
 }
 
 #no-info {
